Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37808

QPrintDialog - Mac dialog not updating QPrinter when printer changed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0
    • 5.3.0 Beta1
    • GUI: Printing
    • None
    • Mac OS X 10.8.5
    • macOS
    • 4e4b2d67010f1fc90a0227c36adab56a3e1ce679

    Description

      Build and run the following code on Mac. Select a different printer from the default one. Notice the debug print out still gets the default printer name.

      #include <QPrinter>
      #include <QPrinterInfo>
      #include <QPrintDialog>
      #include <QDebug>
      #include <QApplication>
      
      int main(int argc, char *argv[])
      {
          QApplication app(argc, argv);
      
          QPrinter p;
          QPrintDialog d(&p);
          if(d.exec()) {
              QPrinterInfo pInfo(p);
              qDebug() << pInfo.printerName() << p.printerName() << p.pageLayout();
          }
          return 0;
      }
      
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johnlayt John Layt
            stephenju Stephen Chu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes